v0.8.0
------
- KSP 1.3
- Rebalanced solar panel masses and costs for more consistency
- Removed retractable part search tag from parts that are not retractable
- Renamed some solar panels to increase consistency and ease of inter-panel comparison
- Reworked manufacturer names to reduce the number of new manufacturers
- Adjusted position of suncatcher transforms on SOL-A, NIV-3 and NIV-16 panels
- K7R 1x4 Concentrating Photovoltaic Panels are no longer retractable
- Added K7R 1x4 Concentrating Photovoltaic Panels and K5R 1x3 Concentrating Photovoltaic Panels, variants of two current panels with added shrouds and retractability
- Added SOL-B Expanding Curved Solar Array (3.75m to 10m expanding curved solar array)
- Added YF-125 Blanket Solar Array (based on NASA asteroid tug concept)
- Added YF-75 Blanket Solar Array (based on SpaceX ITS solar array concept)
- Added K-125-SE Terador Solar Array (dual-axis huge solar array)
- Added new plugin component to run Terador Solar arrays

v0.7.3
------
- Fixed download link in .version file

v0.7.2
------
- Marked for KSP 1.2.2
- Updated MM to 2.7.5
- Standardized manufacturer names

v0.7.1
------
- Marked for KSP 1.2.1
- Updated MM to 2.7.4

v0.7.0
------
- KSP 1.2
- Small tweak to plugin code for TweakScale and for 1.2
- Moved all panels to the new Electrics category
- Minor tweak to plugin that will help TweakScale work on curved panels if it needs to
- Updated bundled MM version

v0.6.2
------
- KSP 1.1.3
- Updated bundled MM version

v0.6.1
------
- KSP 1.1.2
- Updated bundled MM version
- Fixed curved panels not being retractable in the editor

v0.6.0
------
- KSP 1.1 rebuild
- Added part search tags

v0.5.5
------
- Fixed deployable curved panels not updating their GUI fields when closed
- Fixed curved panels not being deployable in the VAB
- Fixed Toggle field of curved panels being shown (should be action group only)

v0.5.4
------
- KSP 1.05 repack
- Added MiniAVC version checking

v0.5.3
------