@@ -1,6 +1,7 @@
 v0.8.0
 ------
 - KSP 1.3
+- Converted all part name/descriptions to localization system
 - Rebalanced solar panel masses and costs for more consistency
 - Removed retractable part search tag from parts that are not retractable
 - Renamed some solar panels to increase consistency and ease of inter-panel comparison
@@ -9,8 +10,8 @@ v0.8.0
 - K7R 1x4 Concentrating Photovoltaic Panels are no longer retractable
 - Added K7R 1x4 Concentrating Photovoltaic Panels and K5R 1x3 Concentrating Photovoltaic Panels, variants of two current panels with added shrouds and retractability
 - Added SOL-B Expanding Curved Solar Array (3.75m to 10m expanding curved solar array)
-- Added YF-125 Blanket Solar Array (based on NASA asteroid tug concept)
-- Added YF-75 Blanket Solar Array (based on SpaceX ITS solar array concept)
+- Added OKEB-125 Blanket Solar Array (based on NASA asteroid tug concept)
+- Added OKEB-75 Blanket Solar Array (based on SpaceX ITS solar array concept)
 - Added K-125-SE Terador Solar Array (dual-axis huge solar array)
 - Added new plugin component to run Terador Solar arrays
 
